--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
               </ul>
             </nav>
           </div>
-          <!--div class="icons">
-            <a href="#" class="icons-btn d-inline-block js-search-open"><span class="icon-search"></span></a>
+          <div class="icons">
+            <!--a href="#" class="icons-btn d-inline-block js-search-open"><span class="icon-search"></span></a>
             <a href="#" class="icons-btn d-inline-block"><span class="icon-heart-o"></span></a>
             <a href="cart.html" class="icons-btn d-inline-block bag">
               <span class="icon-shopping-bag"></span>
               <span class="number">2</span>
-            </a>
+            </a-->
             <a href="#" class="site-menu-toggle js-menu-toggle ml-3 d-inline-block d-lg-none"><span class="icon-menu"></span></a>
-          </div-->
+          </div>
         </div>
       </div>
     </div>
@@ -125,12 +125,13 @@
           <div class="col-lg-5 text-center">
             <div class="featured-hero-product w-100">
               <h1 class="mb-2">Welcome</h1>
-              <h4>Welcome to ImaginMagic Gift Shop! Here, you can browse for items that you, your friends, and your family might enjoy. Happy shopping!</h4>
+              <h6>Welcome to ImaginMagic Gift Shop! Here, you can browse for items that you, your friends, and your family might enjoy. Happy shopping!</h6>
               <!--div class="price mt-3 mb-5"><strong>1,499</strong> <del>$1,999</del></div-->
               <p><!--a href="#" class="btn btn-outline-primary rounded-0">Shop Now</a--> 
 			  <a href="https://imaginmagic.redbubble.com/" class="btn btn-primary rounded-0">Shop Now</a></p>
             </div>  
           </div>
+		
           <div class="col-lg-7 align-self-end text-center text-lg-right">
             <img src="images/new/gifts-png.png" alt="Image" class="img-fluid img-1">
           </div>
