--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <a href="https://tinyurl.com/YZipPouch" class="item">
               <img src="images/yogurt-pouch.jpg" alt="Image" class="img-fluid">
               <div class="item-info">
-                <h3>Yogurt and Planet Jelly</h3>
+                <h3>Yogurt & Jelly</h3>
                 <span class="collection d-block">Zipper Pouch</span>
                 <strong class="price">$15.14</strong>
               </div>
@@ -191,7 +191,7 @@
             <a href="https://tinyurl.com/macaronsticker" class="item">
               <img src="images/macaron-star.jpg" alt="Image" class="img-fluid">
               <div class="item-info">
-                <h3>Pink Macaron With Star</h3>
+                <h3>Pink Macaron</h3>
                 <span class="collection d-block">Matte Sticker</span>
                 <strong class="price">$2.92</strong>
               </div>
