--- a/index.html
+++ b/index.html
@@ -228,6 +228,37 @@
               </div>
             </a>
           </div>
+		  
+          <div class="col-6 col-md-6 col-lg-4">
+            <a href="https://www.redbubble.com/i/coasters/Matcha-Icecream-by-imaginmagic/58218604.E5I3N?asc=u" class="item">
+              <img src="images/icecream-coasters.jpg" alt="Image" class="img-fluid">
+              <div class="item-info">
+                <h3>Matcha Icecream</h3>
+                <span class="collection d-block">4 Coasters</span>
+                <strong class="price">$17.95</strong>
+              </div>
+            </a>
+          </div>
+          <div class="col-6 col-md-6 col-lg-4">
+            <a href="https://www.redbubble.com/i/sticker/Galaxy-by-imaginmagic/59369534.EJUG5?asc=u" class="item">
+              <img src="images/galaxy-sticker-pack.jpg" alt="Image" class="img-fluid">
+              <div class="item-info">
+                <h3>Galaxy</h3>
+                <span class="collection d-block">Matte Stickers</span>
+                <strong class="price">$2.92</strong>
+              </div>
+            </a>
+          </div>		  
+          <div class="col-6 col-md-6 col-lg-4">
+            <a href="https://www.redbubble.com/i/sticker/Night-Diamond-by-imaginmagic/57840951.EJUG5?asc=u" class="item">
+              <img src="images/night-diamond.jpg" alt="Image" class="img-fluid">
+              <div class="item-info">
+                <h3>Night Diamond</h3>
+                <span class="collection d-block">Matte Sticker</span>
+                <strong class="price">$2.92</strong>
+              </div>
+            </a>
+          </div>		  
 
         </div>
       </div>
@@ -271,7 +302,6 @@
                   </div>
                 </a>
               </div>
-
               <div class="product">
                 <a href="#" class="item">
                   <span class="tag">Sale</span>
@@ -283,7 +313,6 @@
                   </div>
                 </a>
               </div>
-
               <div class="product">
                 <a href="#" class="item">
                   <img src="images/product_3.jpg" alt="Image" class="img-fluid">
@@ -294,7 +323,6 @@
                   </div>
                 </a>
               </div>
-
               <div class="product">
                 <a href="#" class="item">
                   <img src="images/product_1.jpg" alt="Image" class="img-fluid">
@@ -305,7 +333,6 @@
                   </div>
                 </a>
               </div>
-
               <div class="product">
                 <a href="#" class="item">
                   <span class="tag">Sale</span>
@@ -317,7 +344,6 @@
                   </div>
                 </a>
               </div>
-
               <div class="product">
                 <a href="#" class="item">
                   <img src="images/product_3.jpg" alt="Image" class="img-fluid">
@@ -328,7 +354,6 @@
                   </div>
                 </a>
               </div>
-
             </div>
           </div>
         </div>
@@ -411,7 +436,6 @@
                 <li class="email">imaginmagic.art@gmail.com</li>
               </ul>
             </div>
-
             
           </div-->
         </div>
