--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
               </div>
             </a>
           </div>
-		  <!--images/icecream-coasters.jpg-->
+
           <div class="col-6 col-md-6 col-lg-4">
             <a href="https://www.redbubble.com/i/coasters/Matcha-Icecream-by-imaginmagic/58218604.E5I3N?asc=u" class="item">
-              <img src="images/coffee-pack.jpg" alt="Image" class="img-fluid">
+              <img src="images/icecream-coasters.jpg" alt="Image" class="img-fluid">
               <div class="item-info">
                 <h3>Matcha Icecream</h3>
                 <span class="collection d-block">4 Coasters</span>
