--- a/index.html
+++ b/index.html
@@ -258,7 +258,17 @@
                 <strong class="price">$2.92</strong>
               </div>
             </a>
-          </div>		  
+          </div>
+          <div class="col-6 col-md-6 col-lg-4">
+            <a href="https://www.redbubble.com/i/sticker/Pink-Jelly-Pen-by-imaginmagic/59811475.O9UDB?asc=u" class="item">
+              <img src="images/pink-pen.jpg" alt="Image" class="img-fluid">
+              <div class="item-info">
+                <h3>Pink Jelly Pen</h3>
+                <span class="collection d-block">Transparent Sticker</span>
+                <strong class="price">$3.56</strong>
+              </div>
+            </a>
+          </div>		
 
         </div>
       </div>
