--- a/jewelry.html
+++ b/jewelry.html
@@ -127,7 +127,7 @@
           <div class="col-lg-5 text-left">
             <div class="featured-hero-product w-100 text-left">
               <h1 class="mb-2">Jewelry</h1>
-              <h6>Please note that for the following products, price varies depending on material and engraving. Shipping fee is different depending where you are. All prices are shown in <b>USD</b> since the manufacturer is located in the US.<br></h6>
+              <h6>Please note that for the following products, price varies depending on material and engraving. Shipping fee is different depending on where you are. All prices are shown in <b>USD</b> since the manufacturer is located in the US.<br></h6>
             </div>  
           </div>
           <div class="col-lg-7 align-self-end text-center text-lg-right">
