--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
           <div class="col-lg-5 text-center">
             <div class="featured-hero-product w-100">
               <h1 class="mb-2">Welcome</h1>
-              <h6>Browse for items that you, your friends, and your family might enjoy. They are perfect for holidays, birthdays, or other occasions.</h6>
+              <h6>Browse for items that you, your friends, and your family might enjoy. They are perfect for holidays, birthdays, or other occasions.
+		    <br>Sale: 20%-60% off everything except for jewelry <br>Code: FALLDEALS <br>Expires: October 15, 2020 11:59pm</h6>
               <!--div class="price mt-3 mb-5"><strong>1,499</strong> <del>$1,999</del></div-->
               <p><!--a href="#" class="btn btn-outline-primary rounded-0">Shop Now</a--> 
 			  <p><a href="#browse" class="btn btn-primary rounded-0">Start Browsing</a>
