--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <p><!--a href="#" class="btn btn-outline-primary rounded-0">Shop Now</a--> 
 			  <p><a href="#browse" class="btn btn-primary rounded-0">Start Browsing</a>
 			  <a href="jewelry.html" class="btn btn-primary rounded-0">Jewelry</a></p>
-		<h6 class="mb-2">Sale: 20%-60% off everything except for jewelry <br>Code: FALLDEALS <br>Expires: October 15, 2020 11:59pm</h6>    
+		<h6 class="mb-2">Sale: 20%-60% off all except jewelry <br>Code: FALLDEALS<br>Expires: October 15, 2020 11:59pm</h6>    
             </div>  
           </div>
 		
