--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               <div class="item-info">
                 <h3>Rainbow Flower</h3>
                 <span class="collection d-block">Spiral Notebook</span>
-                <strong class="price">$15.96</strong>
+                <strong class="price">CAD$15.96</strong>
               </div>
             </a>
           </div>
@@ -178,7 +178,7 @@
               <div class="item-info">
                 <h3>Gazing Frog</h3>
                 <span class="collection d-block">Wood Mounted Print</span>
-                <strong class="price">$35.00</strong>
+                <strong class="price">CAD$35.00</strong>
               </div>
             </a>
           </div>		  
@@ -188,7 +188,7 @@
               <div class="item-info">
                 <h3>Yogurt & Jelly</h3>
                 <span class="collection d-block">Zipper Pouch</span>
-                <strong class="price">$15.14</strong>
+                <strong class="price">CAD$15.14</strong>
               </div>
             </a>
           </div>
@@ -199,7 +199,7 @@
               <div class="item-info">
                 <h3>Pink Macaron</h3>
                 <span class="collection d-block">Matte Sticker</span>
-                <strong class="price">$2.92</strong>
+                <strong class="price">CAD$2.92</strong>
               </div>
             </a>
           </div>
@@ -220,7 +220,7 @@
               <div class="item-info">
                 <h3>Whale In The Sky</h3>
                 <span class="collection d-block">Acrylic Block</span>
-                <strong class="price">$35.35</strong>
+                <strong class="price">CAD$35.35</strong>
               </div>
             </a>
           </div>		  
@@ -230,7 +230,7 @@
               <div class="item-info">
                 <h3>Morning Coffee</h3>
                 <span class="collection d-block">Transparent Stickers</span>
-                <strong class="price">$3.56</strong>
+                <strong class="price">CAD$3.56</strong>
               </div>
             </a>
           </div>
@@ -241,7 +241,7 @@
               <div class="item-info">
                 <h3>Matcha Icecream</h3>
                 <span class="collection d-block">4 Coasters</span>
-                <strong class="price">$17.95</strong>
+                <strong class="price">CAD$17.95</strong>
               </div>
             </a>
           </div>
@@ -251,7 +251,7 @@
               <div class="item-info">
                 <h3>Galaxy</h3>
                 <span class="collection d-block">Matte Stickers</span>
-                <strong class="price">$2.92</strong>
+                <strong class="price">CAD$2.92</strong>
               </div>
             </a>
           </div>		  
@@ -261,7 +261,7 @@
               <div class="item-info">
                 <h3>Night Diamond</h3>
                 <span class="collection d-block">Matte Sticker</span>
-                <strong class="price">$2.92</strong>
+                <strong class="price">CAD$2.92</strong>
               </div>
             </a>
           </div>
@@ -271,7 +271,7 @@
               <div class="item-info">
                 <h3>Pink Jelly Pen</h3>
                 <span class="collection d-block">Transparent Sticker</span>
-                <strong class="price">$3.56</strong>
+                <strong class="price">CAD$3.56</strong>
               </div>
             </a>
           </div>		
