--- a/jewelry.html
+++ b/jewelry.html
@@ -202,7 +202,7 @@
               <div class="item-info">
                 <h3>Pink Macaron</h3>
                 <span class="collection d-block">Adjustable Bangle</span>
-                <strong class="price">$39.95 - $64.95</strong>
+                <strong class="price">USD$39.95 - $64.95</strong>
               </div>
             </a>
           </div>
@@ -212,7 +212,7 @@
               <div class="item-info">
                 <h3>Bubble Tea</h3>
                 <span class="collection d-block">Necklace</span>
-                <strong class="price">$39.95 - $64.95</strong>
+                <strong class="price">USD$39.95 - $64.95</strong>
               </div>
             </a>
           </div>		  
@@ -222,7 +222,7 @@
               <div class="item-info">
                 <h3>Rainbow Cloud</h3>
                 <span class="collection d-block">Adjustable Bangle</span>
-                <strong class="price">$39.95 - $64.95</strong>
+                <strong class="price">USD$39.95 - $64.95</strong>
               </div>
             </a>
           </div>
@@ -233,7 +233,7 @@
               <div class="item-info">
                 <h3>Angelic Whale</h3>
                 <span class="collection d-block">Zirconia Necklace</span>
-                <strong class="price">$47.95</strong>
+                <strong class="price">USD$47.95</strong>
               </div>
             </a>
           </div>
