--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+	  <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177654754-2"></script>
+	<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+
+  		gtag('config', 'UA-177654754-2');
+	</script>
     <title>ImaginMagic &mdash; Gift Shop</title>
 	<meta name="facebook-domain-verification" content="58wfahd98wbuiupibzenkq8f4pa0uf" />
     <meta charset="utf-8">
