--- a/jewelry.html
+++ b/jewelry.html
@@ -246,8 +246,6 @@
         <div class="row mb-5">
 
           <div class="col-md-5">
-            
-            
             <div class="site-section-heading pt-3 mb-4">
               <h3 class="text-black">Material & Price</h3>
             </div>
@@ -267,6 +265,7 @@
       <div class="container">
         <div class="row pt-5 mt-5 text-center">
           <div class="col-md-12">
+		  <p>ImaginMagic is only responsible for the digital art graphic designs but not responsible for the physical products themselves. By purchasing anything at this shop you agree with the previous statement.</p>
             <p>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="https://imaginmagic-shop.github.io/" target="_blank" class="text-primary">ImaginMagic</a> & <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
