--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	</script>
     <title>ImaginMagic &mdash; Gift Shop</title>
 	<meta name="facebook-domain-verification" content="58wfahd98wbuiupibzenkq8f4pa0uf" />
+	  <meta name="robots" content="noindex"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
