--- a/index.html
+++ b/index.html
@@ -285,7 +285,26 @@
               </div>
             </a>
           </div>		
-
+          <div class="col-6 col-md-6 col-lg-4">
+            <a href="https://www.redbubble.com/i/sticker/Galaxy-Butterfly-by-imaginmagic/60093271.EJUG5?asc=u" class="item">
+              <img src="images/butterfly.jpg" alt="Image" class="img-fluid">
+              <div class="item-info">
+                <h3>Galaxy Butterfly</h3>
+                <span class="collection d-block">Sticker</span>
+                <strong class="price">CAD$2.92</strong>
+              </div>
+            </a>
+          </div>	
+          <div class="col-6 col-md-6 col-lg-4">
+            <a href="https://www.redbubble.com/i/sticker/Kiwano-Melon-by-imaginmagic/60093977.EJUG5?asc=u" class="item">
+              <img src="images/melon.jpg" alt="Image" class="img-fluid">
+              <div class="item-info">
+                <h3>Kiwano/Horned Melon</h3>
+                <span class="collection d-block">Sticker</span>
+                <strong class="price">CAD$2.92</strong>
+              </div>
+            </a>
+          </div>				  
         </div>
       </div>
     </div>
