--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
               <img src="images/butterfly.jpg" alt="Image" class="img-fluid">
               <div class="item-info">
                 <h3>Galaxy Butterfly</h3>
-                <span class="collection d-block">Sticker</span>
+                <span class="collection d-block">Matte Sticker</span>
                 <strong class="price">CAD$2.92</strong>
               </div>
             </a>
@@ -300,7 +300,7 @@
               <img src="images/melon.jpg" alt="Image" class="img-fluid">
               <div class="item-info">
                 <h3>Kiwano/Horned Melon</h3>
-                <span class="collection d-block">Sticker</span>
+                <span class="collection d-block">Matte Sticker</span>
                 <strong class="price">CAD$2.92</strong>
               </div>
             </a>
