--- a/jewelry.html
+++ b/jewelry.html
@@ -237,6 +237,29 @@
               </div>
             </a>
           </div>
+		
+          <div class="col-6 col-md-6 col-lg-4">
+            <a href="https://shineon.com/products/imaginmagic-matcha-ice-cream-dessert" class="item">
+              <img src="images/icecream.jpg" alt="Image" class="img-fluid">
+              <div class="item-info">
+                <h3>Matcha Ice Cream Dessert</h3>
+                <span class="collection d-block">Necklace</span>
+                <strong class="price">USD$39.95 - $64.95</strong>
+              </div>
+            </a>
+          </div>		
+
+          <div class="col-6 col-md-6 col-lg-4">
+            <a href="https://shineon.com/products/imaginmagic-butterfly-necklace" class="item">
+              <img src="images/butterfly-neck.jpg" alt="Image" class="img-fluid">
+              <div class="item-info">
+                <h3>Galaxy Butterfly</h3>
+                <span class="collection d-block">Necklace</span>
+                <strong class="price">USD$39.95 - $64.95</strong>
+              </div>
+            </a>
+          </div>		
+		
         </div>
       </div>
     </div>
