--- a/jewelry.html
+++ b/jewelry.html
@@ -242,7 +242,7 @@
             <a href="https://shineon.com/products/imaginmagic-matcha-ice-cream-dessert" class="item">
               <img src="images/icecream.jpg" alt="Image" class="img-fluid">
               <div class="item-info">
-                <h3>Matcha Ice Cream Dessert</h3>
+                <h3>Matcha Dessert</h3>
                 <span class="collection d-block">Necklace</span>
                 <strong class="price">USD$39.95 - $64.95</strong>
               </div>
