--- a/index.html
+++ b/index.html
@@ -275,6 +275,28 @@
               </div>
             </a>
           </div>
+			  
+          <div class="col-6 col-md-6 col-lg-4">
+            <a href="https://www.redbubble.com/i/sticker/Pink-Gummy-Bear-by-imaginmagic/60663361.EJUG5?asc=u" class="item">
+              <img src="images/pink-bear.jpg" alt="Image" class="img-fluid">
+              <div class="item-info">
+                <h3>Pink Bear</h3>
+                <span class="collection d-block">Matte Sticker</span>
+                <strong class="price">CAD$2.92</strong>
+              </div>
+            </a>
+          </div>
+          <div class="col-6 col-md-6 col-lg-4">
+            <a href="https://www.redbubble.com/i/sticker/Gummy-Bears-by-imaginmagic/60664082.O9UDB?asc=u" class="item">
+              <img src="images/bear-pack.jpg" alt="Image" class="img-fluid">
+              <div class="item-info">
+                <h3>Gummy Bears</h3>
+                <span class="collection d-block">Transparent Stickers</span>
+                <strong class="price">CAD$3.56</strong>
+              </div>
+            </a>
+          </div>	
+			  
           <div class="col-6 col-md-6 col-lg-4">
             <a href="https://www.redbubble.com/i/sticker/Pink-Jelly-Pen-by-imaginmagic/59811475.O9UDB?asc=u" class="item">
               <img src="images/pink-pen.jpg" alt="Image" class="img-fluid">
