--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 			  <p><a href="#browse" class="btn btn-primary rounded-0">Start Browsing</a>
 			  <a href="jewelry.html" class="btn btn-primary rounded-0">Jewelry</a></p>
-		<h6 class="mb-2">Sale: 20%-60% off all except jewelry <br>Code: FALLDEALS<br>Expires: October 15, 2020 11:59pm</h6>    
+		<h6 class="mb-2"><a href="https://ko-fi.com/imaginmagic">Ko-fi Store</a></h6>    
             </div>  
           </div>
 		
