--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 			  <p><a href="#browse" class="btn btn-primary rounded-0">Start Browsing</a>
 			  <a href="jewelry.html" class="btn btn-primary rounded-0">Jewelry</a></p>
-		<h6 class="mb-2"><a href="https://ko-fi.com/imaginmagic">Ko-fi Store</a></h6>    
+		<h6 class="mb-2">Sale: 20%-60% off all except jewelry <br>Code: FALLDEALS<br>Expires: October 15, 2020 11:59pm</h6>    
             </div>  
           </div>
 		
@@ -213,7 +213,7 @@
             </a>
           </div>	
 			  
-          <div class="col-6 col-md-6 col-lg-4">
+          <!--div class="col-6 col-md-6 col-lg-4">
             <a href="https://www.redbubble.com/i/sticker/Pink-Jelly-Pen-by-imaginmagic/59811475.O9UDB?asc=u" class="item">
               <img src="images/pink-pen.jpg" alt="Image" class="img-fluid">
               <div class="item-info">
@@ -242,7 +242,7 @@
                 <strong class="price">CAD$2.92</strong>
               </div>
             </a>
-          </div>				  
+          </div-->				  
         </div>
       </div>
     </div>
