Remove discount code

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
         <div class="row align-items-center">
           <div class="col-lg-5 text-center">
             <div class="featured-hero-product w-100">
-              <h1 class="mb-2">Welcome</h1>
-              <h6 class="mb-2">Browse for items that you, your friends, and your family might enjoy. They are perfect for holidays, birthdays, or other occasions.</h6>
+				<h1 class="mb-2">Welcome</h1>
+				<h6 class="mb-2">Browse for items that you, your friends, and your family might enjoy. They are perfect for holidays, birthdays, or other occasions.</h6>
 
-			  <p><a href="#browse" class="btn btn-primary rounded-0">Start Browsing</a>
-			  <a href="jewelry.html" class="btn btn-primary rounded-0">Jewelry</a></p>
-		<h6 class="mb-2">Sale: 20%-60% off all except jewelry <br>Code: FALLDEALS<br>Expires: October 15, 2020 11:59pm</h6>    
+				<p><a href="#browse" class="btn btn-primary rounded-0">Start Browsing</a>
+				<a href="jewelry.html" class="btn btn-primary rounded-0">Jewelry</a></p>
+				<!--h6 class="mb-2">Sale: 20%-60% off all except jewelry <br>Code: FALLDEALS<br>Expires: October 15, 2020 11:59pm</h6-->    
             </div>  
           </div>
 		
