Add product page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="main-nav d-none d-lg-block">
             <nav class="site-navigation text-right text-md-center" role="navigation">
               <ul class="site-menu js-clone-nav d-none d-lg-block">
-                <li><a href="jewelry.html">Jewelry</a></li>
+                <!--li><a href="jewelry.html">Jewelry</a></li-->
                 <li><a href="https://imaginmagic.redbubble.com/">Other Products</a></li>
               </ul>
             </nav>
@@ -80,7 +80,7 @@
 				<h6 class="mb-2">Browse for items that you, your friends, and your family might enjoy. They are perfect for holidays, birthdays, or other occasions.</h6>
 
 				<p><a href="#browse" class="btn btn-primary rounded-0">Start Browsing</a>
-				<a href="jewelry.html" class="btn btn-primary rounded-0">Jewelry</a></p>
+				<!--a href="jewelry.html" class="btn btn-primary rounded-0">Jewelry</a></p-->
 				<!--h6 class="mb-2">Sale: 20%-60% off all except jewelry <br>Code: FALLDEALS<br>Expires: October 15, 2020 11:59pm</h6-->    
             </div>  
           </div>
@@ -99,8 +99,8 @@
       <div class="container-fluid">
         <div class="row no-gutters products">	
 		  <a name="browse"><a/>
-          <div class="col-6 col-md-6 col-lg-4">
-            <a href="https://www.redbubble.com/i/notebook/Rainbow-Flower-Light-by-imaginmagic/56564516.WX3NH?asc=u" class="item">
+          <div class="col-6 col-md-6 col-lg-4"> <!--https://www.redbubble.com/i/notebook/Rainbow-Flower-Light-by-imaginmagic/56564516.WX3NH?asc=u-->
+            <a href="notebook.html" class="item">
               <img src="images/rainbow-flower-notebook.jpg" alt="Image" class="img-fluid">
               <div class="item-info">
                 <h3>Rainbow Flower</h3>
